--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<ul>
 		<li><a href="">Home</a></li>
 		<li><a href="">Gallary</a></li>
-		<li><a target="_blank" href="../registration/index.html">Registration Form</a></li>
+		<li><a target="_blank" href="registration/index.html">Registration Form</a></li>
 		<li><a href="">Portfolio</a></li>
 		<li><a href="">Contact</a></li>
 	</ul>
